--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ features = ["pyo3/extension-module"]
 
 [dependency-groups]
 dev = [
+    "ipython>=9.6.0",
     "maturin>=1.9.6",
+    "prometheus-client>=0.23.1",
     "pytest>=8.4.2",
+    "ruff>=0.14.1",
+    "ty>=0.0.1a23",
 ]
